# pygtide

./: README.md  meson.build  pyproject.toml
pygtide/: core.py
src/: etpred.pyf
